2004-05-29  n1xt3r  <n1xt3r@bluefalcon>

	* default/templates/atom.xml: Removed xml:lang="en" from <feed> tag.

	* default/templates/atom.xml, default/templates/rdf.xml, default/templates/rdf_catfeed.xml:
	Updated RSS and Atom templates, set encoding back to BLOG_CHARSET.

	* ChangeLog, nb: Minor code cleanup.

	* ChangeLog, nb (move_entry): Removed unecessary code.

	* ChangeLog, nb (move_entry):
	Fixed corruption cuased to category's database.

2004-05-28  n1xt3r  <n1xt3r@bluefalcon>

	* ChangeLog, plugins/rss.sh:
	Filtered escaped characters in NB_ArchiveTitle.

	* ChangeLog, docs/nanoblogger.html:
	Updated "Settings and Configuration".

2004-05-27  n1xt3r  <n1xt3r@bluefalcon>

	* default/templates/makepage.htm: Added a meta-tag for the generator.

	* ChangeLog, plugins/articles.off:
	- Simplified format of an article source file.
	- Added useful information in the comments of the plugin's code.

2004-05-26  n1xt3r  <n1xt3r@bluefalcon>

	* ChangeLog, docs/nanoblogger.html:
	Updated "Templates and Placeholders" and "Plugins" sections of the manual.

	* ChangeLog, nb, plugins/blog_links.sh, plugins/category_links.sh:
	- Replaced category_links plugin with more general, blog_links plugin.
	- (build_blog): Moved code to generate links into new blog_links plugin.

2004-05-25  n1xt3r  <n1xt3r@bluefalcon>

	* default/blog.conf, plugins/archive/master_index.sh, ChangeLog:
	Moved AUTO_FORMAT & CAT_FEEDS into Plugin Variables section.

	* ChangeLog, plugins/entry/auto_break.sh, plugins/entry/moods.sh:
	Added checks for AUTO_FORMAT.

	* ChangeLog, plugins/archive/master_index.sh:
	Moved master_index plugin into archive plugins.

	* plugins/entry/auto_break.sh, plugins/entry/entry_catlinks.sh, plugins/entry/moods.sh (read_entry):
	Moved code for category links into a new entry plugin.

	* ChangeLog, nb, plugins/atom.sh, plugins/master_index.sh:
	- Removed AUTO_FORMAT and autoformat plugins.
	- Renamed autoformat plugins to entry plugins.