@@ -4,7 +4,7 @@
 #EDITOR="pico"
 
 # Set maximum number of entries to display on the main page.
-MAX_DISPLAY="10"
+MAX_ENTRIES="10"
 
 # Date format of a new blog entry (used by the "date" command).
 DATE_FORMAT="%B %d, %Y %l:%M %p"
@@ -51,8 +51,8 @@ BLOG_CONTACT=""
 # example email as link
 # BLOG_CONTACT='<a href="mailto:foo@null.org">email foo</a>'
 
-# Enable independent permalinks (each permalink as a seperate html file) - 0/1 = off/on.
-FULL_PERMALINKS="0"
+# Build permalinks (a page for each entry) - 0/1 = off/on.
+PERMALINKS="0"
 
 # Enable plugins - 0/1 = off/on.
 ENABLE_PLUGINS="1"
@@ -69,5 +69,5 @@ TIDY_ARGS=""
 FORTUNE_FILE=""
 
 # Enable category feeds
-CAT_FEEDS="0"
+CATEGORY_FEEDS="0"
 
